[package]
name = "bet"
authors = ["Ibis Sunrosa <@drsunrosa@gmail.com>"]
description = "Backing library for bet-server (at https://github.com/sunrosa/bet-server)"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["v4"] }

# Optimize libraries
[profile.dev.package."*"]
opt-level = 3

# Slightly optimize this code
# [profile.dev]
# opt-level = 1

# Aggressive optimizations
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false